<package>
  <name>osc_bridge</name>
  <version>1.0.0</version>
  <description>osc_bridge contains the core functionality of ROS-to-OSC communication.</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/osc_bridge</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Michael Carroll</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>pytouchosc</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>txosc</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>pytouchosc</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>txosc</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>pytouchosc</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->

<export>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>