<package>
  <name>teleop_handler</name>
  <version>1.0.0</version>
  <description>TouchOSC layout and tabpage handler for publishing teleop messages with an iPhone or iPad.</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/teleop_handler</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Michael Carroll</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>touchosc_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>touchosc_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>touchosc_bridge</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->

</package>