<package>
  <name>touchosc_bridge</name>
  <version>1.0.0</version>
  <description>TouchOSC_bridge provides the core functionality of communicating with ROS and the
      TouchOSC iOS application.

      It provides a standard interface to commmon TouchOSC features, such as accessing the
      acclerometer data, diagnostics data, active clients and tabpages, as well as the 
      ability to make iPhones vibrate.

      Also included is a default tabpage handler for tabpages with no specified Python
      module.</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/touchosc_bridge</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Michael Carroll</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>osc_bridge</build_depend>
  <build_depend>pytouchosc</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>touchosc_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>osc_bridge</run_depend>
  <run_depend>pytouchosc</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>touchosc_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>osc_bridge</test_depend> -->
  <!-- <test_depend>pytouchosc</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>touchosc_msgs</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->

<export>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>